Try fix the tour alignment, and footer.

--- a/src/assets/scss/black-dashboard-react/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_sidebar-and-main-panel.scss
@@ -33,7 +33,7 @@
 
   > .content {
     padding: 78px 30px 30px 30px;
-    min-height: calc(100vh - 70px);
+    min-height: calc(100vh - 130px);
   }
 
   > .navbar {
